# geomodel-2-3dweb

./: .gitignore  .travis.yml  DEV_NOTES.md  README.md  WEB_API.md  build_assimp.sh  pyproject.toml  requirements.txt  tox.ini  travis-ci.sh
.github/workflows/: build-models.yml  build_api_backend.yml  build_backend.yml  build_models.yml  build_models_backend.yml  python-app.yml  release.yml  release_api_backend.yml  release_backend.yml  release_models.yml  release_models_backend.yml  tests.yml
.travis/: travis-ci.sh
doc-src/source/: conf.py  db.style.rst
doc_src/: README.md
doc_src/source/: config_builder.rst  imports.rst  index.rst
docs/: Makefile  README  README.md  config_builder.html  db.geometry.html  db.html  db.metadata.html  db.style.html  exports.html  file_processing.html  genindex.html  imports.gocad.html  imports.html  index.html  make.bat  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: config_builder.html  file_processing.html  index.html  weakref.html
docs/_sources/: db.metadata.rst.txt  index.rst.txt
docs/source/: batch_proc.rst  conf.py  conv_webasset.rst  db.geometry.model_geometries.rst  (+30 more)
docsource/: Makefile
lib/: README.md  file_processing.py  makeBoreholes.py
scripts/: .coveragerc  README.md  batch.txt  batch_proc.py  build_api_dir.sh  collada2gltf.py  collada_out.py  conv_webasset.py  file_processing.py  gocad2collada.py  gocad2daeobj2.py  gocad2webasset.py  gocad_kit.py  gocad_vessel.py  index.py  makeBoreholes.py  makeDaeBoreholes.py  make_boreholes.py  model_geometries.py  obj_out.py  props.py
test/: README  build_assimp.sh  gocad_vessel_test.py  run_test.py  run_test.sh  testline.pl  testsurf.ts
web_build/: batch.txt  batch_proc.py  build_api_dir.sh  make_boreholes.py  model_conv.py
(+269 files in other folders)
