[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "numpy>=1.14",
    "OWSLib",
    "Pillow",
    "pycollada",
    "pyproj",
    "SQLAlchemy",
    "diskcache",
    "nvcl-kit",
    "geojson",
    "fastapi",
    "aiofiles",
    "uvicorn",
    "wheel",
    "pytest>=8.3.2",
    "pygltflib>=1.16.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "coverage>=7.6.2",
    "defusedxml>=0.7.1",
    "genbadge>=1.1.1",
    "pytest>=8.3.3",
    "httpx>=0.27.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]

